<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginFragment">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_til_user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_hint_user" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_til_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/login_til_user"
        app:layout_constraintStart_toStartOf="@+id/login_til_user"
        app:layout_constraintTop_toBottomOf="@+id/login_til_user">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_hint_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_btn_login"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/login_btn_login"
        app:layout_constraintEnd_toEndOf="@+id/login_til_password"
        app:layout_constraintStart_toStartOf="@+id/login_til_password"
        app:layout_constraintTop_toBottomOf="@+id/login_til_password" />

    <Button
        android:id="@+id/login_btn_signup"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/login_btn_signup"
        app:layout_constraintEnd_toEndOf="@+id/login_btn_login"
        app:layout_constraintStart_toStartOf="@+id/login_btn_login"
        app:layout_constraintTop_toBottomOf="@+id/login_btn_login" />
</androidx.constraintlayout.widget.ConstraintLayout>