<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainFragment">


    <TextView
        android:id="@+id/main_txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/main_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/main_txt_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="@+id/main_txt_title"
        app:layout_constraintStart_toStartOf="@+id/main_txt_title"
        app:layout_constraintTop_toBottomOf="@+id/main_txt_title"
        tools:text="Albert" />

    <Button
        android:id="@+id/main_btn_logout"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/main_btn_logout"
        app:layout_constraintEnd_toEndOf="@+id/main_txt_user"
        app:layout_constraintStart_toStartOf="@+id/main_txt_user"
        app:layout_constraintTop_toBottomOf="@+id/main_txt_user" />

    <Button
        android:id="@+id/main_btn_delete"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/main_btn_delete"
        app:layout_constraintEnd_toEndOf="@+id/main_btn_logout"
        app:layout_constraintStart_toStartOf="@+id/main_btn_logout"
        app:layout_constraintTop_toBottomOf="@+id/main_btn_logout" />
</androidx.constraintlayout.widget.ConstraintLayout>